--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 
     <div id="Warning">
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong>Sorry!!</strong> There is no news to show.
+            <strong>Sorry!!</strong> There is no news for this Country.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
     </div>
 
     <div class="container my-1">
-        <h1>Top News by <span class="badge bg-success">!News</span></h1>
+        <h1>Top News by <span class="badge bg-success">!News <div class="spinner-border" role="status" style="display: inherit;">
+            <span class="visually-hidden">Loading...</span>
+        </div></span></h1>
         <hr>
         <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
