--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="container my-1">
-        <h1>Top News by <span class="badge bg-success">!News <div class="spinner-border" role="status" style="display: inherit;">
+        <h1>Top News by <span id="badge" class="badge bg-success">!News <div class="spinner-border" role="status" style="display: inherit;">
             <span class="visually-hidden">Loading...</span>
         </div></span></h1>
         <hr>
